Update bff and add permissions
